; ModuleID = '/home/carl/AnghaBench/skynet/lualib-src/extr_lua-memory.c_lprofactive.c'
source_filename = "/home/carl/AnghaBench/skynet/lualib-src/extr_lua-memory.c_lprofactive.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [12 x i8] c"prof.active\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*)* @lprofactive to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @lprofactive(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i32*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  store i32* %0, i32** %2, align 8
  %6 = load i32*, i32** %2, align 8
  %7 = call i64 @lua_isnone(i32* %6, i32 1)
  %8 = icmp ne i64 %7, 0
  br i1 %8, label %9, label %10

9:                                                ; preds = %1
  store i32* null, i32** %3, align 8
  br label %16

10:                                               ; preds = %1
  %11 = load i32*, i32** %2, align 8
  %12 = call i64 @lua_toboolean(i32* %11, i32 1)
  %13 = icmp ne i64 %12, 0
  %14 = zext i1 %13 to i64
  %15 = select i1 %13, i32 1, i32 0
  store i32 %15, i32* %4, align 4
  store i32* %4, i32** %3, align 8
  br label %16

16:                                               ; preds = %10, %9
  %17 = load i32*, i32** %3, align 8
  %18 = call i32 @mallctl_bool(i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str, i64 0, i64 0), i32* %17)
  store i32 %18, i32* %5, align 4
  %19 = load i32*, i32** %2, align 8
  %20 = load i32, i32* %5, align 4
  %21 = call i32 @lua_pushboolean(i32* %19, i32 %20)
  ret i32 1
}

declare dso_local i64 @lua_isnone(i32*, i32) #1

declare dso_local i64 @lua_toboolean(i32*, i32) #1

declare dso_local i32 @mallctl_bool(i8*, i32*) #1

declare dso_local i32 @lua_pushboolean(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
